# blockchain-compression

./: .gitignore  Cargo.toml  README.md
docs/: API.md
documentation/: mkdocs.yml
documentation/docs/: api-reference.md  architecture.md  contributing.md  examples.md  getting-started.md  index.md  installation.md  presets.md  usage-guide.md
examples/: basic_usage.rs  performance_benchmark.rs  solanavault_integration.rs
src/: lib.rs
src/algorithms/: enhanced_ctw.rs  mod.rs  multi_pass.rs  practical_max.rs
src/core/: mod.rs  pattern_engine.rs  traits.rs
src/presets/: mod.rs  solana.rs
tests/: debug_compression.rs  solana_integration_tests.rs
