[package]
name = "blockchain-compression"
version = "0.1.0"
edition = "2021"
authors = ["Cryptuon Team <team@cryptuon.com>"]
description = "High-performance compression library optimized for blockchain data structures"
license = "MIT"
repository = "https://github.com/cryptuon/blockchain-compression"
homepage = "https://cryptuon.github.io/blockchain-compression"
documentation = "https://docs.rs/blockchain-compression"
keywords = ["compression", "blockchain", "pattern-recognition", "solana", "ethereum"]
categories = ["compression", "algorithms", "data-structures"]
readme = "README.md"

[features]
default = ["deflate"]
# solana = ["dep:solana-sdk"]
# ethereum = ["dep:ethers-core"]
# bitcoin = ["dep:bitcoin"]
deflate = ["dep:flate2"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
bincode = "1.3"

# Compression backends
flate2 = { version = "1.0", optional = true }
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

# Blockchain-specific dependencies (enable individually to avoid conflicts)
# solana-sdk = { version = "1.18", optional = true }
# ethers-core = { version = "2.0", optional = true }
# bitcoin = { version = "0.31", optional = true }

# Performance and utilities
rayon = "1.8"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
hex = "0.4"

[[example]]
name = "basic_usage"
required-features = ["zstd"]

[[example]]
name = "performance_benchmark"
required-features = ["zstd"]

[[example]]
name = "solanavault_integration"
required-features = ["zstd"]


[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
